Fixed header display on mobile

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -79,3 +79,15 @@
   width: calc(100% + 8px);
   height: 0.25rem;
 }
+
+@media (max-width: 640px) {
+  .header {
+    visibility: hidden;
+  }
+}
+
+@media (min-width: 768px) {
+  .header {
+    visibility: visible;
+  }
+}
